k8s-manifests/producer/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: producer
  labels:
    name: producer
    app: api-gateway-poc
