k8s-manifests/producer/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: producer-service
  namespace: producer
  labels:
    app: producer
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: producer
